# libmojo

./: Cargo.toml  build.rs
src/: alloc.rs  buf.rs  jvm.rs  lib.rs  listpack.rs  main.rs
src/actor/: java.rs  mod.rs
src/app/: mod.rs
src/jni/: mod.rs
src/jni/wrapper/: errors.rs  jnienv.rs  macros.rs  signature.rs  version.rs
src/jni/wrapper/descriptors/: class_desc.rs  desc.rs  exception_desc.rs  field_desc.rs  method_desc.rs
src/jni/wrapper/java_vm/: init_args.rs  vm.rs
src/jni/wrapper/objects/: auto_local.rs  global_ref.rs  jbytebuffer.rs  jclass.rs  jfieldid.rs  jlist.rs  jmap.rs  jmethodid.rs  jobject.rs  jstaticfieldid.rs  jstaticmethodid.rs  jstring.rs  jthrowable.rs  jvalue.rs
src/jni/wrapper/strings/: java_str.rs
